Added blog images on homepage

--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@ gtag('config', 'UA-56286897-6');
           </div>
         </div>
         <div class="row justify-content-center blogPost">
-          <div class="col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-2">
             <div class="date">
               <div class="day">
                 11
@@ -965,7 +965,7 @@ gtag('config', 'UA-56286897-6');
               <div class="month">March</div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-9">
+          <div class="col-sm-12 col-md-6">
             <div class="article">
               <div class="title">
                 Trackyo, building easy-to-use products targeting to lead a better life
@@ -983,38 +983,44 @@ gtag('config', 'UA-56286897-6');
               </div>
             </div>
           </div>
+          <div class="col-sm-12 col-md-4">
+            <img class="blogPostImage" src="media/blog.png">
+          </div>
         </div>
         <div class="row blogPost" style="background-color: #eee;">
-            <div class="col-sm-12 col-md-3">
-              <div class="date">
-                <div class="day">
-                  28
-                  <span class="year">2017</span>
-                </div>
-                <div class="month">April</div>
+          <div class="col-sm-12 col-md-2">
+            <div class="date">
+              <div class="day">
+                28
+                <span class="year">2017</span>
               </div>
+              <div class="month">April</div>
             </div>
-            <div class="col-sm-12 col-md-9">
-              <div class="article">
-                <div class="title">
-                  T-Hub startup building vehicle tracking device
-                </div>
-                <div class="articleContent">
-                  At a time and age when safety and security of transportation is gaining prominence in India, T-Hub incubated startup Trackyo is building a solution that will help in vehicle monitoring and tracking. The Hyderabad-based early stage startup is designing security solutions for vehicle monitoring and driver assistance systems specifically for gated societies including residential, shopping malls and business centres. These societies are prone to over-speeding and reckless driving with some reports revealing that over 4.5 lakh deaths and 1.25 crore serious injuries have occurred, globally.
-                </div>
-                <div class="icons">
-                  <a target="_blank" href="https://telanganatoday.com/t-hub-startup-building-vehicle-tracking-device">
-                    <i class="fa fa-long-arrow-right icon" aria-hidden="true"></i>
-                  </a>
-                  <a target="_blank" href="https://www.facebook.com/dialog/share?app_id=140586622674265&display=popup&href=https%3A%2F%2Ftelanganatoday.com%2Ft-hub-startup-building-vehicle-tracking-device&picture=&title=T-Hub+startup+building+vehicle+tracking+device&description=when+safety+and+security+of+transportation+is+gaining+prominence%2C+Trackyo+is+building+solution+that+help+in+vehicle+monitoring+and+tracking&redirect_uri=http%3A%2F%2Fs7.addthis.com%2Fstatic%2Fthankyou.html">
-                  <i class="fa fa-share-alt icon" aria-hidden="true"></i>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="article">
+              <div class="title">
+                T-Hub startup building vehicle tracking device
+              </div>
+              <div class="articleContent">
+                At a time and age when safety and security of transportation is gaining prominence in India, T-Hub incubated startup Trackyo is building a solution that will help in vehicle monitoring and tracking. The Hyderabad-based early stage startup is designing security solutions for vehicle monitoring and driver assistance systems specifically for gated societies including residential, shopping malls and business centres. These societies are prone to over-speeding and reckless driving with some reports revealing that over 4.5 lakh deaths and 1.25 crore serious injuries have occurred, globally.
+              </div>
+              <div class="icons">
+                <a target="_blank" href="https://telanganatoday.com/t-hub-startup-building-vehicle-tracking-device">
+                  <i class="fa fa-long-arrow-right icon" aria-hidden="true"></i>
                 </a>
-                </div>
+                <a target="_blank" href="https://www.facebook.com/dialog/share?app_id=140586622674265&display=popup&href=https%3A%2F%2Ftelanganatoday.com%2Ft-hub-startup-building-vehicle-tracking-device&picture=&title=T-Hub+startup+building+vehicle+tracking+device&description=when+safety+and+security+of+transportation+is+gaining+prominence%2C+Trackyo+is+building+solution+that+help+in+vehicle+monitoring+and+tracking&redirect_uri=http%3A%2F%2Fs7.addthis.com%2Fstatic%2Fthankyou.html">
+                <i class="fa fa-share-alt icon" aria-hidden="true"></i>
+              </a>
               </div>
             </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img class="blogPostImage" src="media/blog.png">
+          </div>
         </div>
         <div class="row blogPost">
-          <div class="col-sm-12 col-md-3">
+          <div class="col-sm-12 col-md-2">
             <div class="date">
               <div class="day">
                 29
@@ -1023,7 +1029,7 @@ gtag('config', 'UA-56286897-6');
               <div class="month">April</div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-9">
+          <div class="col-sm-12 col-md-6">
             <div class="article">
               <div class="title">
                 Traffic police for your gated community
@@ -1040,6 +1046,9 @@ gtag('config', 'UA-56286897-6');
                 </a>
               </div>
             </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img class="blogPostImage" src="media/blog.png">
           </div>
         </div>
 <!--    <div class="row blogPost" style="background-color: #eee;">
@@ -1068,6 +1077,9 @@ gtag('config', 'UA-56286897-6');
             </div>
           </div>
         </div>-->
+        <div class="formContainer">
+          <a class="form" href="blog">View All</a>
+        </div>
       </div>
     </section>
     <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
