Final touches + mobile view improve + add 2 partners

--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@ gtag('config', 'UA-56286897-6');
             </div>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
               <img src="media/partners/CMU.png" style="width:100px;">
@@ -877,22 +877,28 @@ gtag('config', 'UA-56286897-6');
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
+              <img src="media/partners/CoCreationConsulting.png">
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-auto">
+            <div class="partnerElement">
+              <img id="nebula" src="media/partners/AutoNebula.png">
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-auto">
+            <div class="partnerElement">
               <img src="media/partners/THub2.png" style="width:130px;">
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 col-lg-auto">
+          <div class="w-100"></div>
+          <div class="col-sm-12 col-md-4 col-lg-3 offset-lg-3">
             <div class="partnerElement">
-              <img src="media/partners/CoCreationConsulting.png" style="top:18px;">
+              <img src="media/partners/yasar.png" style="top:5px;">
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 col-lg-auto">
+          <div class="col-sm-12 col-md-4 col-lg-3 offset-lg-3">
             <div class="partnerElement">
-              <img id="nebula" src="media/partners/AutoNebula.png" style="top:14px;">
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-4 col-lg-auto">
-            <div class="partnerElement">
-              <img src="media/partners/yasar.png" >
+              <img src="media/partners/MorrisGarages.png" >
             </div>
           </div>
         </div>
@@ -908,38 +914,46 @@ gtag('config', 'UA-56286897-6');
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-sm-12 col-md-4 col-lg-auto">
+          <div class="col-sm-12 col-md-4 col-lg-2">
             <div class="featuredElement">
               <a href="https://goo.gl/lDFmzX" target="_blank">
-                <img src="media/featured/TNews.png" style="width:100px;">
+                <img src="media/featured/TNews.png" id="TNews" style="width:100px;">
               </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="featuredElement">
               <a href="https://goo.gl/2tCVto" target="_blank">
-                <img src="media/featured/TelanganaTodayTransparent.png" style="top:22px;">
+                <img src="media/featured/TelanganaTodayTransparent.png" id="Telangana" style="top:22px;">
               </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="featuredElement">
               <a href="https://goo.gl/jzVyFz" target="_blank">
-                <img src="media/featured/TheNEWSMinute.png" style="top:33px;">
+                <img src="media/featured/TheNEWSMinute.png" id="TheNewsMinute" style="top:33px;">
               </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="featuredElement">
               <a href="https://goo.gl/OZrdbP" target="_blank">
-                <img src="media/featured/StartupHyderabadTransparent.png" style="top:17px;">
+                <img src="media/featured/StartupHyderabadTransparent.png" id="StartupHyderabad" style="top:17px;">
+              </a>
+            </div>
+          </div>
+          <div class="w-100"></div>
+          <div class="col-sm-12 col-md-4 col-lg-auto">
+            <div class="featuredElement">
+              <a href="https://goo.gl/lBrIoK" target="_blank">
+                <img src="media/featured/StartupSimbaTransparent.png" id="StartupSimba" style="bottom:5px;">
               </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="featuredElement">
-              <a href="https://goo.gl/lBrIoK" target="_blank">
-                <img src="media/featured/StartupSimbaTransparent.png" style="bottom:5px;">
+              <a href="https://indianceo.in/startup-directory/trackyo/" target="_blank">
+                <img src="media/featured/IndianCEO.png" id="IndianCEO">
               </a>
             </div>
           </div>
