--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,9 @@ gtag('config', 'UA-56286897-6');
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-body" id="contact">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-auto">
