Removed a video + made loader css ahead of others

--- a/index.html
+++ b/index.html
@@ -451,11 +451,11 @@ gtag('config', 'UA-56286897-6');
               <img src="media/videos/p6.png" class="pop" data-type="youtube" data-id="MIZeoa-zIaU" data-autoplay='true'>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3">
+          <!--<div class="col-sm-12 col-md-3">
             <div class="videosElement">
               <img src="media/videos/p1b.png" class="pop" data-type="youtube" data-id="hah1ET9hQoE" data-autoplay='true'>
             </div>
-          </div>
+          </div>-->
           <div class="col-sm-12 col-md-3">
             <div class="videosElement">
               <img src="media/videos/p3D.png" class="pop" data-type="youtube" data-id="qT-Gfpms9zs" data-autoplay='true'>
