Contact form + Video suggestion off

--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@ gtag('config', 'UA-56286897-6');
                         <input name="email" type="text" class="my-form" placeholder="Email">
                       </div>
                       <div class="col">
-                        <input name="website" type="text" class="my-form" placeholder="Webiste">
+                        <input name="mobile" type="text" class="my-form" placeholder="Mobile Number">
                       </div>
                     </div>
                     <div class="row" >
