Added blog + added linkbacks

--- a/index.html
+++ b/index.html
@@ -872,33 +872,45 @@ gtag('config', 'UA-56286897-6');
         <div class="row justify-content-center align-items-center">
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
-              <img src="media/partners/CMU.png" style="width:100px;">
+              <a href="https://www.cmu.edu/" target="_blank">
+                <img src="media/partners/CMU.png" style="width:100px;">
+              </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
-              <img src="media/partners/CoCreationConsulting.png">
+              <a href="https://www.cocreationconsulting.com" target="_blank">
+                <img src="media/partners/CoCreationConsulting.png">
+              </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
-              <img id="nebula" src="media/partners/AutoNebula.png">
+              <a href="https://www.autonebula.com/" target="_blank">
+                <img id="nebula" src="media/partners/AutoNebula.png">
+              </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
-              <img src="media/partners/THub2.png" style="width:130px;">
+              <a href="https://www.t-hub.co" target="_blank">
+                <img src="media/partners/THub2.png" style="width:130px;">
+              </a> 
             </div>
           </div>
           <div class="w-100"></div>
           <div class="col-sm-12 col-md-4 col-lg-3 offset-lg-3">
             <div class="partnerElement">
-              <img src="media/partners/yasar.png" style="top:5px;">
+              <a href="https://www.yasar.edu.tr/en/" target="_blank">
+                <img src="media/partners/yasar.png" style="top:5px;">
+              </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-4 col-lg-3 offset-lg-3">
             <div class="partnerElement">
-              <img src="media/partners/MorrisGarages.png" >
+              <a href="http://mgmotor.co.in" target="_blank">
+                <img src="media/partners/MorrisGarages.png" >
+              </a>
             </div>
           </div>
         </div>
