Mobile layout size rectified

--- a/index.html
+++ b/index.html
@@ -474,9 +474,11 @@ gtag('config', 'UA-56286897-6');
         <div class="row justify-content-center">
           <div class="col-sm-auto">
             <div class="aa">
-              Why choose Trackyo?<br>
-              <span class="smaller">Our connected vehicle technology platform has proven to be
-              <p>much more effective than the currently used alternative solutions</span>
+              <div>
+                Why choose Trackyo?
+              </div>
+              <div class="smaller">Our connected vehicle technology platform has proven to be
+              <p>much more effective than the currently used alternative solutions</div>
             </div>
           </div>
         </div>
